# Anode-Code-Editor

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
server/: .env.example  Caddyfile  Cargo.toml  README.md  anode-sync.service
server/src/: main.rs
server/web/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  AccountSync.tsx  ActivityBar.tsx  ClaudePanel.tsx  ClaudeUsageBar.tsx  ClaudeUsageDetail.tsx  ContextMenu.tsx  EditorArea.tsx  EditorPane.tsx  FileLabel.tsx  Icon.tsx  MarkdownPreview.tsx  MenuBar.tsx  ProjectIconPicker.tsx  ProjectInfoModal.tsx  ResizeHandle.tsx  SettingsPanel.tsx  SetupWizard.tsx  Sidebar.tsx  SourceControl.tsx  TerminalPanel.tsx  TitleBar.tsx  WarmTerminals.tsx  XtermView.tsx
src/data/: welcome.ts
src/editor/: activeView.ts  colorPicker.ts  linter.ts  setup.ts  smoothCaret.ts
src/lib/: account.ts  actions.ts  claudeLimits.ts  notify.ts  tauri.ts  usageFormat.ts
src/state/: store.ts
src/styles/: global.css  themes.ts
src/types/: shims.d.ts
