[package]
name = "anode-sync"
version = "1.2.2"
description = "Anode account + settings sync server"
authors = ["Gheat"]
edition = "2021"

[[bin]]
name = "anode-sync"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
