[package]
name = "anode"
version = "1.4.0"
description = "Anode - A Simple, Clean, Efficient Editor."
authors = ["Gheat"]
edition = "2021"

[lib]
name = "anode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
